--- a/pom.xml
+++ b/pom.xml
@@ -71,4 +71,14 @@
         </plugins>
     </build>
 
+    <filter>
+      <filter-name>simpleCORSFilter</filter-name>
+      <filter-class>
+          me.waiyan.demo.controller.SimpleCORSFilter
+      </filter-class>
+    </filter>
+    <filter-mapping>
+      <filter-name>simpleCORSFilter</filter-name>
+      <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </project>
