--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+	         <groupId>com.thetransactioncompany</groupId>
+	          <artifactId>cors-filter</artifactId>
+	           <version>[ version ]</version>
+        </dependency>
+
     </dependencies>
 
     <build>
