--- a/pom.xml
+++ b/pom.xml
@@ -75,8 +75,8 @@
                   <goals>
                     <goal>build</goal>
                   </goals>
-                </execution> -->
-              </executions>
+                </execution>
+               </executions> -->
             </plugin>
         </plugins>
     </build>
