--- a/vue-app/package.json
+++ b/vue-app/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^3.3.7",
     "vue": "^2.2.1",
     "vue-loader": "^11.3.4",
+    "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0",
     "vuex": "^2.3.0"
   },
