--- a/pom.xml
+++ b/pom.xml
@@ -50,10 +50,10 @@
             <artifactId>h2</artifactId>
         </dependency>
 
-        <dependency>
+        <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+        </dependency> -->
 
     </dependencies>
 
