--- a/vue-todo/package.json
+++ b/vue-todo/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "vue-app",
-  "description": "A Vue.js project",
+  "name": "Vue TODO",
+  "description": "A simple Vue.js project",
   "version": "1.0.0",
-  "author": "medson10 <medson.oliveira@fatec.sp.gov.br>",
+  "author": "Vitor Manfré <vitormd97@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
-    "vue": "^2.2.1",
-    "vue-loader": "^11.3.4",
-    "vue-resource": "^1.3.1",
-    "vue-router": "^2.4.0",
-    "vuex": "^2.3.0"
+    "vue": "^2.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -23,7 +18,10 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
-    "vue-loader": "^11.3.4",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^5.0.1",
+    "vue-loader": "^11.1.4",
+    "vue-resource": "^1.3.1",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
